Add sessions to typicalStudentsTaAssist